Some things in Server Network